# AgentiteC

./: .gitignore  .gitstat.json  BUG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  PLAN.md  README.md  RESUME.md  SYSTEMS.md  THIRD_PARTY_LICENSES.md
.claude/: settings.json  statusline-command.sh
.claude/agents/: codebase-qa-reviewer.md
assets/fonts/: Roboto-Regular-msdf.json
assets/schemas/: animation.schema.json  entity.schema.json  level.schema.json
assets/shaders/: compile_shaders.sh  msdf.frag.glsl  msdf.frag.spv  sdf.frag.glsl  sdf.frag.spv  sprite.frag.glsl  sprite.frag.spv  sprite.vert.glsl  sprite.vert.spv  text.frag.glsl  text.frag.spv  transition_dissolve.frag.glsl  transition_fade.frag.glsl  transition_slide.frag.glsl  transition_wipe.frag.glsl  ui.frag.hlsl  ui.metal  ui.vert.hlsl  vignette.frag.glsl  vignette.frag.spv
carbide/: README.md
cmake/: agentite-config.cmake.in
docs/: README.md  integration-recipes.md
docs/api/: animation.md  audio.md  camera.md  ecs.md  input.md  localization.md  pathfinding.md  profiler.md  shader.md  sprite.md  text.md  tilemap.md  transition.md  ui.md  utilities.md  virtual_resolution.md
examples/animation/: README.md  main.cpp
examples/async/: main.cpp
examples/charts/: README.md  main.cpp
examples/collision/: main.cpp
examples/debug/: main.cpp
examples/demo/: README.md  main.c  main.cpp
examples/dialogs/: README.md  main.cpp
examples/ecs_custom_system/: README.md  main.cpp
examples/gizmos/: main.cpp
examples/hidpi/: main.cpp
examples/hotreload/: main.cpp
examples/inspector/: main.cpp
examples/lighting/: main.cpp
examples/localization/: main.cpp
examples/minimal/: README.md  main.c  main.cpp
examples/mods/: main.cpp
examples/msdf/: main.cpp
examples/noise/: main.cpp
examples/particles/: main.cpp
examples/pathfinding/: README.md  main.cpp
examples/physics/: main.cpp
examples/physics2d/: main.cpp
examples/prefab/: main.cpp
examples/profiler/: main.cpp
examples/replay/: main.cpp
examples/richtext/: README.md  main.cpp
examples/scene/: main.cpp
examples/shaders/: main.cpp
examples/sprites/: README.md  main.c  main.cpp
examples/strategy/: README.md  main.cpp
examples/strategy-sim/: main.c  main.cpp
examples/tilemap/: README.md  main.c  main.cpp
examples/transitions/: main.cpp
examples/ui/: README.md  main.cpp
examples/ui_node/: README.md  main.cpp
include/agentite/: agentite.h  ai.h  ai_tracks.h  animation.h  anomaly.h  asset.h  async.h  audio.h  biome.h  blackboard.h  blueprint.h  camera.h  camera3d.h  collision.h  combat.h  command.h  condition.h  construction.h  containers.h  crafting.h  data_config.h  debug.h  demand.h  dialog.h  ecs.h  ecs_inspector.h  ecs_reflect.h  error.h  event.h  finances.h  fleet.h  fog.h  formula.h  game_context.h  game_event.h  game_speed.h  gizmos.h  helpers.h  history.h  hotreload.h  (+56 more)
include/carbon/: ai.h  ai_tracks.h  animation.h  anomaly.h  audio.h  biome.h  blackboard.h  blueprint.h  camera.h  camera3d.h  carbon.h  command.h  condition.h  construction.h  containers.h  crafting.h  data_config.h  demand.h  dialog.h  ecs.h  error.h  event.h  finances.h  fog.h  formula.h  game_context.h  game_event.h  game_speed.h  helpers.h  history.h  htn.h  incident.h  input.h  line.h  loan.h  log.h  math_safe.h  modifier.h  msdf.h  network.h  (+28 more)
lib/miniz/: miniz_export.h
scripts/: run-build.sh  run-sanitizers.sh  run-tests.sh
src/: main.c  main.cpp
src/ai/: ai_tracks.c  ai_tracks.cpp  blackboard.c  blackboard.cpp  htn.c  htn.cpp  pathfinding.c  pathfinding.cpp  personality.c  personality.cpp  strategy.c  strategy.cpp  task.c  task.cpp
src/audio/: audio.c  audio.cpp
src/core/: asset.cpp  async.cpp  collision.cpp  command.c  command.cpp  containers.c  containers.cpp  engine.c  engine.cpp  error.c  error.cpp  event.c  event.cpp  formula.c  formula.cpp  formula_builtins.cpp  formula_compiler.cpp  formula_internal.h  formula_lexer.cpp  game_context.c  game_context.cpp  hotreload.cpp  line.c  line.cpp  localization.cpp  log.cpp  math_safe.cpp  mod.cpp  noise.cpp  path.cpp  physics.cpp  physics2d.cpp  profiler.cpp  query.c  query.cpp  watch.cpp  watch_linux.inl  watch_macos.inl  watch_win32.inl
src/debug/: debug.cpp  debug_console.cpp  debug_draw.cpp  debug_internal.h
src/ecs/: ecs.c  ecs.cpp  ecs_inspector.cpp  ecs_reflect.cpp  prefab.cpp  transform.cpp
src/game/: components.c  components.cpp  components.h  game.c  game.cpp  game.h
src/graphics/: animation.c  animation.cpp  camera.c  camera.cpp  camera3d.c  camera3d.cpp  gizmos.cpp  lighting.cpp  lighting_shaders.h  msdf.cpp  msdf_atlas.cpp  msdf_gen.cpp  particle.cpp  postprocess_shaders_spirv.h  shader.cpp  sprite.c  sprite.cpp  sprite_shaders_spirv.h  text.c  text.cpp  text_font.cpp  text_internal.h  text_render.cpp  text_sdf.cpp  text_shaders_spirv.h  tilemap.c  tilemap.cpp  transition.cpp  transition_shaders.h  virtual_resolution.cpp
src/input/: input.c  input.cpp
src/scene/: scene.cpp  scene_internal.h  scene_lexer.cpp  scene_parser.cpp  scene_writer.cpp
src/strategy/: anomaly.c  anomaly.cpp  biome.c  biome.cpp  blueprint.c  blueprint.cpp  combat.cpp  condition.c  condition.cpp  construction.c  construction.cpp  crafting.c  crafting.cpp  data_config.c  data_config.cpp  demand.cpp  dialog.c  dialog.cpp  finances.c  finances.cpp  fleet.cpp  fog.c  fog.cpp  game_event.c  game_event.cpp  game_speed.c  game_speed.cpp  history.c  history.cpp  incident.cpp  loan.c  loan.cpp  modifier.c  modifier.cpp  network.c  network.cpp  power.cpp  rate.c  rate.cpp  replay.cpp  (+18 more)
src/ui/: notification.c  notification.cpp  ui.c  ui.cpp  ui_charts.cpp  ui_colorpicker.cpp  ui_dialog.cpp  ui_draw.c  ui_draw.cpp  ui_hash.c  ui_hash.cpp  ui_layout.cpp  ui_node.cpp  ui_richtext.cpp  ui_style.cpp  ui_table.cpp  ui_text.c  ui_text.cpp  ui_tween.cpp  ui_widgets.c  ui_widgets.cpp  viewmodel.c  viewmodel.cpp
tests/: test_main.cpp
tests/ai/: test_pathfinding.cpp
tests/audio/: test_audio.cpp
tests/core/: test_asset.cpp  test_async.cpp  test_command.cpp  test_engine.cpp  test_error.cpp  (+6 more)
(+135 files in other folders)
